--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grocery mart</title>
+    <title>Sign up | Grocery mart</title>
 
     <!-- Favicon -->
     <link
