--- a/shipping.html
+++ b/shipping.html
@@ -78,7 +78,9 @@
                                             <h2 class="user-address__title">Shipping address</h2>
                                             <p class="user-address__desc">Where should we deliver your order?</p>
                                         </div>
-                                        <button class="user-address__btn btn btn--primary btn--rounded btn--small">
+                                        <button
+                                            class="user-address__btn btn btn--primary btn--rounded btn--small js-toggle"
+                                            toggle-target="#add-new-address">
                                             <img src="./assets/icons/plus.svg" alt="" />
                                             Add a new address
                                         </button>
@@ -86,7 +88,7 @@
                                     <div class="user-address__list">
                                         <!-- Empty message -->
                                         <!-- <p class="user-address__message">
-                                            Not address yet. <a href="#!" class="user-address__link">Add a new address</a>
+                                            Not address yet. <a href="#!" class="user-address__link js-toggle" toggle-target="#add-new-address">Add a new address</a>
                                         </p> -->
 
                                         <!-- Address card 1 -->
@@ -108,7 +110,7 @@
                                             </div>
                                             <div class="address-card__right">
                                                 <div class="address-card__ctrl">
-                                                    <button class="address-card__ctrl-btn">
+                                                    <button class="address-card__ctrl-btn js-toggle" toggle-target="#add-new-address">
                                                         <img class="icon" src="./assets/icons/edit.svg" alt="" />
                                                         Edit
                                                     </button>
@@ -137,7 +139,7 @@
                                             </div>
                                             <div class="address-card__right">
                                                 <div class="address-card__ctrl">
-                                                    <button class="address-card__ctrl-btn">
+                                                    <button class="address-card__ctrl-btn js-toggle" toggle-target="#add-new-address">
                                                         <img class="icon" src="./assets/icons/edit.svg" alt="" />
                                                         Edit
                                                     </button>
@@ -355,16 +357,159 @@
             load("#footer", "./templates/footer.html");
         </script>
 
-        <!-- Dialog / Modal -->
-        <div id="delete-confirm" class="dialog hide">
-            <div class="dialog__content">
-                <div class="dialog__text">Lorem ipsum dolor sit amet consectetur.</div>
-                <div class="dialog__bottom">
-                    <button class="btn btn--small btn--text dialog__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
-                    <button class="btn btn--small btn--primary dialog__btn btn--no-margin js-toggle" toggle-target="#delete-confirm">Confirm</button>
+        <!-- Modal: confirm remove shopping cart item -->
+        <div id="delete-confirm" class="modal modal--small hide">
+            <!-- <button class="modal__close">&times;</button> -->
+            <div class="modal__content">
+                <div class="modal__text">Lorem ipsum dolor sit amet consectetur.</div>
+                <div class="modal__bottom">
+                    <button class="btn btn--small btn--text modal__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
+                    <button class="btn btn--small btn--primary modal__btn btn--no-margin js-toggle" toggle-target="#delete-confirm">Confirm</button>
                 </div>
             </div>
-            <div class="dialog__overlay js-toggle" toggle-target="#delete-confirm"></div>
+            <div class="modal__overlay js-toggle" toggle-target="#delete-confirm"></div>
+        </div>
+
+        <!-- Modal: address new shipping address -->
+        <div id="add-new-address" class="modal modal show">
+            <!-- <button class="modal__close">&times;</button> -->
+            <div class="modal__content">
+                <form action="" class="form">
+                    <h2 class="modal__heading">Add new shipping address.</h2>
+                    <div class="modal__body">
+                        <div class="form__row">
+                            <div class="form__group">
+                                <label for="name" class="form__label form__label--small">Name</label>
+                                <div class="form__text-input form__text-input--small">
+                                    <input type="text" name="name" id="name" placeholder="Name" class="form__input" required minlength="2" />
+                                    <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
+                                </div>
+                                <p class="form__error">Name must be at least 2 characters</p>
+                            </div>
+                            <div class="form__group">
+                                <label for="phone" class="form__label form__label--small">Phone</label>
+                                <div class="form__text-input form__text-input--small">
+                                    <input type="tel" name="phone" id="phone" placeholder="Phone" class="form__input" required minlength="10" />
+                                    <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
+                                </div>
+                                <p class="form__error">Phone must be at least 10 characters</p>
+                            </div>
+                        </div>
+
+                        <div class="form__group">
+                            <label for="address" class="form__label form__label--small">Address</label>
+                            <div class="form__text-area">
+                                <textarea
+                                    name="address"
+                                    id="address"
+                                    placeholder="Address (Area and street)"
+                                    class="form__text-area-input"
+                                    required></textarea>
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
+                            </div>
+                            <p class="form__error">Address is not empty</p>
+                        </div>
+                        <div class="form__group">
+                            <label for="city" class="form__label form__label--small">City/District/Town</label>
+                            <div class="form__text-input form__text-input--small">
+                                <input
+                                    type="text"
+                                    name=""
+                                    id="city"
+                                    placeholder="City/District/Town"
+                                    class="form__input js-toggle"
+                                    toggle-target="#city-dialog" />
+                                <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
+
+                                <div id="city-dialog" class="form__select-dialog hide">
+                                    <button class="form__close-dialog d-none d-sm-block js-toggle" toggle-target="#city-dialog">&times;</button>
+                                    <div class="form__search">
+                                        <input type="text" placeholder="Search" class="form__search-input" />
+                                        <img src="./assets/icons/search.svg" alt="" class="form__search-icon icon" />
+                                    </div>
+                                    <ul class="form__options-list">
+                                        <li class="form__option">An Giang</li>
+                                        <li class="form__option form__option--current">Ba Ria - Vung Tau</li>
+                                        <li class="form__option">Bac Giang</li>
+                                        <li class="form__option">Bac Kan</li>
+                                        <li class="form__option">Bac Lieu</li>
+                                        <li class="form__option">Bac Ninh</li>
+                                        <li class="form__option">Ben Tre</li>
+                                        <li class="form__option">Binh Dinh</li>
+                                        <li class="form__option">Binh Duong</li>
+                                        <li class="form__option">Binh Phuoc</li>
+                                        <li class="form__option">Binh Thuan</li>
+                                        <li class="form__option">Ca Mau</li>
+                                        <li class="form__option">Can Tho</li>
+                                        <li class="form__option">Cao Bang</li>
+                                        <li class="form__option">Da Nang</li>
+                                        <li class="form__option">Dak Lak</li>
+                                        <li class="form__option">Dak Nong</li>
+                                        <li class="form__option">Dien Bien</li>
+                                        <li class="form__option">Dong Nai</li>
+                                        <li class="form__option">Dong Thap</li>
+                                        <li class="form__option">Gia Lai</li>
+                                        <li class="form__option">Ha Giang</li>
+                                        <li class="form__option">Ha Nam</li>
+                                        <li class="form__option">Ha Noi</li>
+                                        <li class="form__option">Ha Tinh</li>
+                                        <li class="form__option">Hai Duong</li>
+                                        <li class="form__option">Hai Phong</li>
+                                        <li class="form__option">Hau Giang</li>
+                                        <li class="form__option">Hoa Binh</li>
+                                        <li class="form__option">Hung Yen</li>
+                                        <li class="form__option">Khanh Hoa</li>
+                                        <li class="form__option">Kien Giang</li>
+                                        <li class="form__option">Kon Tum</li>
+                                        <li class="form__option">Lai Chau</li>
+                                        <li class="form__option">Lam Dong</li>
+                                        <li class="form__option">Lang Son</li>
+                                        <li class="form__option">Lao Cai</li>
+                                        <li class="form__option">Long An</li>
+                                        <li class="form__option">Nam Dinh</li>
+                                        <li class="form__option">Nghe An</li>
+                                        <li class="form__option">Ninh Binh</li>
+                                        <li class="form__option">Ninh Thuan</li>
+                                        <li class="form__option">Phu Tho</li>
+                                        <li class="form__option">Phu Yen</li>
+                                        <li class="form__option">Quang Binh</li>
+                                        <li class="form__option">Quang Nam</li>
+                                        <li class="form__option">Quang Ngai</li>
+                                        <li class="form__option">Quang Ninh</li>
+                                        <li class="form__option">Quang Tri</li>
+                                        <li class="form__option">Soc Trang</li>
+                                        <li class="form__option">Son La</li>
+                                        <li class="form__option">Tay Ninh</li>
+                                        <li class="form__option">Thai Binh</li>
+                                        <li class="form__option">Thai Nguyen</li>
+                                        <li class="form__option">Thanh Hoa</li>
+                                        <li class="form__option">Thua Thien - Hue</li>
+                                        <li class="form__option">Tien Giang</li>
+                                        <li class="form__option">TP Ho Chi Minh</li>
+                                        <li class="form__option">Tra Vinh</li>
+                                        <li class="form__option">Tuyen Quang</li>
+                                        <li class="form__option">Vinh Long</li>
+                                        <li class="form__option">Vinh Phuc</li>
+                                        <li class="form__option">Yen Bai</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <p class="form__error">City/District/Town is invalid</p>
+                        </div>
+                        <div class="form__group form__group--inline">
+                            <label class="form__checkbox">
+                                <input type="checkbox" name="" id="" class="form__checkbox-input d-none" />
+                                <span class="form__checkbox-label">Set as default address</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="modal__bottom">
+                        <button class="btn btn--small btn--text modal__btn js-toggle" toggle-target="#add-new-address">Cancel</button>
+                        <button class="btn btn--small btn--primary modal__btn btn--no-margin">Create</button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal__overlay"></div>
         </div>
     </body>
 </html>
