--- a/shipping.html
+++ b/shipping.html
@@ -95,8 +95,8 @@
                                         <article class="address-card">
                                             <div class="address-card__left">
                                                 <div class="address-card__choose">
-                                                    <label class="address-card__checkbox">
-                                                        <input type="checkbox" name="" class="address-card__checkbox-input" checked />
+                                                    <label class="cart-info__checkbox">
+                                                        <input type="radio" name="shipping-address" class="cart-info__checkbox-input" checked />
                                                     </label>
                                                 </div>
                                                 <div class="address-card__info">
@@ -110,7 +110,7 @@
                                             </div>
                                             <div class="address-card__right">
                                                 <div class="address-card__ctrl">
-                                                    <button class="address-card__ctrl-btn js-toggle" toggle-target="#add-new-address">
+                                                    <button class="cart-info__edit-btn js-toggle" toggle-target="#add-new-address">
                                                         <img class="icon" src="./assets/icons/edit.svg" alt="" />
                                                         Edit
                                                     </button>
@@ -122,8 +122,8 @@
                                         <article class="address-card">
                                             <div class="address-card__left">
                                                 <div class="address-card__choose">
-                                                    <label class="address-card__checkbox">
-                                                        <input type="checkbox" name="" class="address-card__checkbox-input" />
+                                                    <label class="cart-info__checkbox">
+                                                        <input type="radio" name="shipping-address" class="cart-info__checkbox-input" />
                                                     </label>
                                                 </div>
                                                 <div class="address-card__info">
@@ -139,7 +139,7 @@
                                             </div>
                                             <div class="address-card__right">
                                                 <div class="address-card__ctrl">
-                                                    <button class="address-card__ctrl-btn js-toggle" toggle-target="#add-new-address">
+                                                    <button class="cart-info__edit-btn js-toggle" toggle-target="#add-new-address">
                                                         <img class="icon" src="./assets/icons/edit.svg" alt="" />
                                                         Edit
                                                     </button>
@@ -330,7 +330,7 @@
                                     <span>Estimated Total</span>
                                     <span>$201.65</span>
                                 </div>
-                                <a href="#!" class="cart-info__next-btn btn btn--primary btn--rounded">Continue to checkout</a>
+                                <a href="./payment.html" class="cart-info__next-btn btn btn--primary btn--rounded">Continue to checkout</a>
                             </div>
                             <div class="cart-info">
                                 <a href="#!">
@@ -361,17 +361,19 @@
         <div id="delete-confirm" class="modal modal--small hide">
             <!-- <button class="modal__close">&times;</button> -->
             <div class="modal__content">
-                <div class="modal__text">Lorem ipsum dolor sit amet consectetur.</div>
+                <p class="modal__text">Do you want to remove this item from your shopping cart?</p>
                 <div class="modal__bottom">
-                    <button class="btn btn--small btn--text modal__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
-                    <button class="btn btn--small btn--primary modal__btn btn--no-margin js-toggle" toggle-target="#delete-confirm">Confirm</button>
+                    <button class="btn btn--small btn--outline modal__btn js-toggle" toggle-target="#delete-confirm">Cancel</button>
+                    <button class="btn btn--small btn--danger btn--primary modal__btn btn--no-margin js-toggle" toggle-target="#delete-confirm">
+                        Delete
+                    </button>
                 </div>
             </div>
             <div class="modal__overlay js-toggle" toggle-target="#delete-confirm"></div>
         </div>
 
         <!-- Modal: address new shipping address -->
-        <div id="add-new-address" class="modal modal show">
+        <div id="add-new-address" class="modal modal hide">
             <!-- <button class="modal__close">&times;</button> -->
             <div class="modal__content">
                 <form action="" class="form">
@@ -418,10 +420,13 @@
                                     id="city"
                                     placeholder="City/District/Town"
                                     class="form__input js-toggle"
-                                    toggle-target="#city-dialog" />
+                                    toggle-target="#city-dialog"
+                                    readonly />
                                 <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
 
+                                <!-- Select dialog -->
                                 <div id="city-dialog" class="form__select-dialog hide">
+                                    <h2 class="form__dialog-heading d-none d-sm-block">City/District/Town</h2>
                                     <button class="form__close-dialog d-none d-sm-block js-toggle" toggle-target="#city-dialog">&times;</button>
                                     <div class="form__search">
                                         <input type="text" placeholder="Search" class="form__search-input" />
@@ -505,7 +510,9 @@
                     </div>
                     <div class="modal__bottom">
                         <button class="btn btn--small btn--text modal__btn js-toggle" toggle-target="#add-new-address">Cancel</button>
-                        <button class="btn btn--small btn--primary modal__btn btn--no-margin">Create</button>
+                        <button class="btn btn--small btn--primary modal__btn btn--no-margin js-toggle" toggle-target="#add-new-address">
+                            Create
+                        </button>
                     </div>
                 </form>
             </div>
